Fixed the text overlap issue on history page.

--- a/web/src/containers/TransactionsHistory/_TransactionsHistory.scss
+++ b/web/src/containers/TransactionsHistory/_TransactionsHistory.scss
@@ -196,6 +196,9 @@
 		.action_notification-svg svg path {
 			fill: $link;
 		}
+		.right-align {
+			right: 8% !important;
+		}
 	}
 	.loader_background {
 		filter: opacity(0.25) !important;
